# fast-api-github-webhook-handler

./: .gitignore  pyproject.toml  readme.md
app/: main.py
app/services/: GitHubEventHandler.py  MessageSender.py  __init__.py  event_handler.py  message_sender.py
