[tool.poetry]
name = "fast-api-github-webhook-handler"
version = "0.1.0"
description = ""
authors = ["DevMain1953 <alexanderbrenenburgh@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_github_webhook_handler"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
